[gd_scene load_steps=21 format=2]

[ext_resource path="res://3DModels/Monster/monster.glb" type="PackedScene" id=1]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player.gd" type="Script" id=2]
[ext_resource path="res://Monster.gd" type="Script" id=3]
[ext_resource path="res://audio/monsterSee.wav" type="AudioStream" id=4]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_3D.gd" type="Script" id=5]
[ext_resource path="res://audio/monsterNoise1.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/monsterNoise2.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/monsterStareDanger.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/monsterStareDrain2.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/monsterGrunt1.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/monsterGrunt2.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/monsterGrunt3.wav" type="AudioStream" id=12]

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_color = Color( 0, 0, 0, 0.698039 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.47451, 0.47451, 0.47451, 0.768627 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.505678, 2.6909, 0.561622 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.208181, 0.284438, 0.214893 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Cube001:blend_shapes/mouth open")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "crazyOpen"
tracks/0/type = "value"
tracks/0/path = NodePath("Cube001:blend_shapes/mouth open")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "neutral"
tracks/0/type = "value"
tracks/0/path = NodePath("Cube001:blend_shapes/mouth open")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "openMouth"
tracks/0/type = "value"
tracks/0/path = NodePath("Cube001:blend_shapes/mouth open")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.37901 ]
}

[node name="monster" groups=["monster"] instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Cube" parent="." index="0"]
transform = Transform( 0.474981, 0, 0, 0, 0.474981, 0, 0, 0, 0.474981, 0, 0.719474, -1.86265e-09 )
visible = false
material/0 = SubResource( 7 )

[node name="Cylinder" parent="." index="1"]
visible = false

[node name="Cylinder001" parent="." index="2"]
visible = false

[node name="Cube001" parent="." index="3"]
"blend_shapes/mouth open" = 0.7

[node name="RayCast" type="RayCast" parent="Cube001" index="0"]
transform = Transform( 1, -1.86265e-08, -1.48721e-07, 2.70666e-09, -4.56348e-08, 1, -1.49012e-08, -1, -4.65661e-08, -0.384012, 1.27522, -0.478338 )
enabled = true
cast_to = Vector3( 0, -60, 0 )
collision_mask = 643
debug_shape_custom_color = Color( 1, 0, 0, 1 )
debug_shape_thickness = 5

[node name="RayCast2" type="RayCast" parent="Cube001" index="1"]
transform = Transform( 1, -1.86265e-08, -1.48721e-07, 2.70666e-09, -4.56348e-08, 1, -1.49012e-08, -1, -4.65661e-08, 0.407167, 1.2762, -0.137077 )
enabled = true
cast_to = Vector3( 0, -60, 0 )
collision_mask = 643
debug_shape_custom_color = Color( 1, 0, 0, 1 )
debug_shape_thickness = 5

[node name="RayCast3" type="RayCast" parent="Cube001" index="2"]
transform = Transform( 1, -1.86265e-08, -1.48721e-07, 2.70666e-09, -4.56348e-08, 1, -1.49012e-08, -1, -4.65661e-08, -0.015329, 0.417432, -0.275697 )
enabled = true
cast_to = Vector3( 0, -60, 0 )
collision_mask = 643
debug_shape_custom_color = Color( 1, 0, 0, 1 )
debug_shape_thickness = 5

[node name="RayCast4" type="RayCast" parent="Cube001" index="3"]
transform = Transform( 1, -1.86265e-08, -1.48721e-07, 2.70666e-09, -4.56348e-08, 1, -1.49012e-08, -1, -4.65661e-08, -0.0153291, 1.90715, -0.275697 )
enabled = true
cast_to = Vector3( 0, -60, 0 )
collision_mask = 643
debug_shape_custom_color = Color( 1, 0, 0, 1 )
debug_shape_thickness = 5

[node name="Cylinder002" parent="." index="4"]
transform = Transform( 0.121449, 0, 0, 0, 0.121449, 0, 0, 0, 0.121449, 0.00756806, 1.82495, -0.0196924 )
material/0 = SubResource( 8 )

[node name="Visible" type="VisibilityNotifier" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.569408, 0 )
aabb = AABB( -0.906522, -2.5532, -0.534504, 1.81303, 5.10642, 1.06901 )

[node name="MonsterArea" type="Area" parent="." index="6"]
collision_layer = 12
collision_mask = 1156

[node name="CollisionShape" type="CollisionShape" parent="MonsterArea" index="0"]
transform = Transform( 1, 0, 0, 0, 0.922222, 0, 0, 0, 1, 0.0487475, 0.643452, 0 )
shape = SubResource( 1 )

[node name="RandomAudioStreamPlayer" type="AudioStreamPlayer" parent="." index="7"]
script = ExtResource( 2 )
samples = [ ExtResource( 4 ) ]
random_strategy = 2
random_volume_range = 0
random_pitch_range = 0.308

[node name="headVisibility" type="VisibilityNotifier" parent="." index="8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.127207, 3.13542, 0.0395068 )
aabb = AABB( -0.204448, -0.226886, -0.282064, 0.408896, 0.305334, 0.564128 )

[node name="monsterNoise3D" type="AudioStreamPlayer3D" parent="." index="9"]
unit_db = 2.5
unit_size = 2.0
script = ExtResource( 5 )
samples = [ ExtResource( 6 ), ExtResource( 7 ) ]
random_strategy = 2
random_volume_range = 1.0
random_pitch_range = 1.0

[node name="monsterNoise3D_2" type="AudioStreamPlayer3D" parent="." index="10"]
unit_db = 6.5
unit_size = 2.0
script = ExtResource( 5 )
samples = [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), null ]
random_strategy = 2
random_volume_range = 1.0
random_pitch_range = 1.0

[node name="headArea" type="Area" parent="." index="11" groups=["monsterHead"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0521017, 3.23712, -4.65661e-10 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="headArea" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00949842, -0.0221035, 0.0352125 )
shape = SubResource( 2 )

[node name="stareDrainSound" type="AudioStreamPlayer" parent="." index="12"]
script = ExtResource( 2 )
samples = [ ExtResource( 9 ), ExtResource( 8 ) ]
random_strategy = 2
random_volume_range = 0
random_pitch_range = 0.29

[node name="Tween" type="Tween" parent="stareDrainSound" index="0"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="13"]
autoplay = "neutral"
anims/RESET = SubResource( 3 )
anims/crazyOpen = SubResource( 4 )
anims/neutral = SubResource( 5 )
anims/openMouth = SubResource( 6 )

[connection signal="camera_entered" from="Visible" to="." method="_on_Visible_camera_entered"]
[connection signal="camera_exited" from="Visible" to="." method="_on_Visible_camera_exited"]
[connection signal="area_entered" from="MonsterArea" to="." method="_on_MonsterArea_area_entered"]
[connection signal="area_exited" from="MonsterArea" to="." method="_on_MonsterArea_area_exited"]
[connection signal="body_entered" from="MonsterArea" to="." method="_on_MonsterArea_body_entered"]
[connection signal="body_exited" from="MonsterArea" to="." method="_on_MonsterArea_body_exited"]
[connection signal="camera_entered" from="headVisibility" to="." method="_on_headVisibility_camera_entered"]
[connection signal="camera_exited" from="headVisibility" to="." method="_on_headVisibility_camera_exited"]
[connection signal="area_entered" from="headArea" to="." method="_on_headArea_area_entered"]
[connection signal="area_exited" from="headArea" to="." method="_on_headArea_area_exited"]
[connection signal="tween_all_completed" from="stareDrainSound/Tween" to="." method="_on_Tween_tween_all_completed"]
